apps/cabot-cup-next/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cabot-cup-next
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/part-of: cabot-cup
