apps/cabot-cup-next/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-cup-next
  labels:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/component: web
  ports:
    - name: web
      port: 8080
      targetPort: web
      protocol: TCP
