apps/cabot-cup-next/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cabot-cup
  labels:
    app.kubernetes.io/name: cabot-cup
    app.kubernetes.io/component: web
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - cabotcup.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cabot-cup-next
          port: 8080
